# Skid_steer_ws

skid_steer_ws/src/imu_driver/: setup.py
skid_steer_ws/src/imu_driver/imu_driver/: mpu6050_driver.py
skid_steer_ws/src/point_cloud_processing/: package.xml
skid_steer_ws/src/point_cloud_processing/src/: 0_table_scene.cpp  2_circular_cloud.cpp  pcl_filter_node.cpp
skid_steer_ws/src/skid_steer_controller/: package.xml
skid_steer_ws/src/skid_steer_controller/config/: mapper_params_online_async.yaml  skid_steer_controllers.yaml  twist_mux.yaml
skid_steer_ws/src/skid_steer_controller/launch/: controller.launch.py  controller_V1.launch.py
skid_steer_ws/src/skid_steer_controller/src/: simple_controller.cpp
skid_steer_ws/src/skid_steer_cpp_examples/: CMakeLists.txt  package.xml
skid_steer_ws/src/skid_steer_cpp_examples/src/: pcl_test.cpp  simple_publisher.cpp  simple_subscriber.cpp
skid_steer_ws/src/skid_steer_description/: CMakeLists.txt
skid_steer_ws/src/skid_steer_description/config/: display.rviz
skid_steer_ws/src/skid_steer_description/launch/: display.launch.py  gazebo.launch.py  gazebo_V1.launch.py
skid_steer_ws/src/skid_steer_description/meshes/: chasis_skid_steer_V2.stl  skid_steer_chasis_final.stl
skid_steer_ws/src/skid_steer_description/urdf/: common_properties.xacro  skid_steer.urdf.xacro  skid_steer_V2.urdf.xacro  skid_steer_control.xacro  skid_steer_gazebo.xacro
skid_steer_ws/src/skid_steer_localization/: CMakeLists.txt
skid_steer_ws/src/skid_steer_localization/config/: ekf.yaml
skid_steer_ws/src/skid_steer_localization/include/skid_steer_localization/: kalman_filter.hpp
skid_steer_ws/src/skid_steer_localization/launch/: local_localization.launch.py
skid_steer_ws/src/skid_steer_navigation/: CMakeLists.txt
skid_steer_ws/src/skid_steer_navigation/launch/: nav2_bringup.launch.py
skid_steer_ws/src/skid_steer_py_examples/: package.xml  setup.py
skid_steer_ws/src/skid_steer_py_examples/skid_steer_py_examples/: simple_publisher.py
skid_steer_ws/src/skid_steer_slam/: CMakeLists.txt  package.xml
skid_steer_ws/src/skid_steer_slam/config/: mapper_params_online_async.yaml
skid_steer_ws/src/skid_steer_slam/launch/: online_async_slam.launch.py
src/imu_driver/: package.xml
src/imu_driver/imu_driver/: mpu6050_driver.py
src/lora_node/: CMakeLists.txt  package.xml
src/lora_node/src/: lora_goal_receiver.cpp
src/point_cloud_processing/: CMakeLists.txt
src/point_cloud_processing/src/: 1_planner_cloud.cpp
src/skid_steer_bringup/: CMakeLists.txt  package.xml
src/skid_steer_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/skid_steer_controller/: CMakeLists.txt
src/skid_steer_controller/config/: skid_steer_controllers.yaml  twist_mux.yaml
src/skid_steer_controller/include/skid_steer_controller/: simple_controller.hpp
src/skid_steer_controller/launch/: controller_V1.launch.py
src/skid_steer_controller/skid_steer_controller/: simple_controller.py
src/skid_steer_cpp_examples/: CMakeLists.txt  package.xml
src/skid_steer_cpp_examples/src/: pcl_test.cpp  simple_lifecycle_node.cpp
src/skid_steer_description/: package.xml
src/skid_steer_description/launch/: display_V1.launch.py  gazebo_V1.launch.py
src/skid_steer_description/urdf/: materials.xacro  skid_steer_V2.urdf.xacro  skid_steer_control.xacro  skid_steer_gazebo.xacro
src/skid_steer_description/worlds/: world01.sdf
src/skid_steer_firmware/: CMakeLists.txt  package.xml  skid_steer_interface.xml
src/skid_steer_firmware/firmware/motor_controller/: motor_controller.ino
src/skid_steer_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/skid_steer_firmware/include/skid_steer_firmware/: skid_steer_interface.hpp
src/skid_steer_firmware/launch/: hardware_interface.launch.py
src/skid_steer_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp  skid_steer_interface.cpp
src/skid_steer_localization/: CMakeLists.txt  package.xml
src/skid_steer_localization/config/: ekf.yaml
src/skid_steer_localization/launch/: local_localization.launch.py
src/skid_steer_localization/src/: kalman_filter.cpp
src/skid_steer_navigation/: package.xml
src/skid_steer_navigation/config/: nav2_params.yaml
src/skid_steer_navigation/launch/: nav2_bringup.launch.py
src/skid_steer_py_examples/: setup.cfg
src/skid_steer_py_examples/skid_steer_py_examples/: simple_subscriber.py
src/skid_steer_slam/config/: mapper_params_online_async.yaml
src/skid_steer_slam/launch/: online_async_slam.launch.py
